# opentrackio-cpp

./: .gitignore  CMakeLists.txt  LICENCE  README.md  build.bat  build.sh  conanfile.py  install.bat  install.sh
cmake/: Config.cmake.in  Findnlohmann_json.cmake
include/opentrackio-cpp/: OpenTrackIOHelper.h  OpenTrackIOProperties.h  OpenTrackIOSample.h  OpenTrackIOTypes.h
scripts/: build.bat  build.sh  install.bat  install.sh  test.bat  test.sh
src/: OpenTrackIOProperties.cpp  OpenTrackIOSample.cpp  OpenTrackIOTypes.cpp
tests/: .gitignore  CMakeLists.txt  test.cpp
